revised error message states, fix sidebar overlap in small device width

--- a/fec/fec/static/scss/components/_messages.scss
+++ b/fec/fec/static/scss/components/_messages.scss
@@ -100,7 +100,7 @@ p {
 //
 
 .message--small {
-  background-position: u(1rem 1rem);
+  background-position: u(1rem 1.5rem);
   padding: u(4rem 1rem 1rem 1rem);
 
   &.message {
@@ -187,7 +187,7 @@ p {
 
   .message--small {
     background-size: u(2rem);
-    background-position: u(1rem 1rem);
+    background-position: u(1rem 1.5rem);
     padding: u(1rem 1rem 1rem 4rem);
   }
 
